feat: 빠른시작->액티비티 연결

--- a/src/app/start/start.css
+++ b/src/app/start/start.css
@@ -17,3 +17,9 @@
   );
   backdrop-filter: blur(1.5px);
 }
+
+.red-gradient {
+  background: lightgray no-repeat;
+  background-position: -28.718px -19.943px;
+  background-size: 116.364% 116.364%;
+}
