--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,3 +36,19 @@ input[type='number']::-webkit-inner-spin-button {
 .rounded-main {
   border-radius: 12px;
 }
+
+.red-gradient {
+  border-radius: 0px 0px 20px 20px;
+  background: linear-gradient(180deg, #fff 0%, #fffafa 34.96%, #ffdcd7 100%);
+}
+
+.red-gradient-2 {
+  border-radius: 16px;
+  background: linear-gradient(
+    180deg,
+    #ff4f38 -70.88%,
+    #ffd2cc 30.2%,
+    #ffedea 96.73%,
+    #fff 100%
+  );
+}
